<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment"
    android:background="@color/graylight"
    android:orientation="vertical">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="250dp">-->
<!--        <LinearLayout-->
<!--            android:background="@drawable/gradientbackground"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="350dp"-->
<!--            android:orientation="vertical">-->
<!--            <ImageView-->
<!--                android:layout_marginTop="45dp"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:src="@drawable/ic_person"/>-->
<!--            <TextView-->
<!--                android:id="@+id/full_name_id"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Full Name"-->
<!--                android:textColor="#fff"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="21sp"/>-->
<!--        </LinearLayout>-->
<!--&lt;!&ndash;        <androidx.cardview.widget.CardView&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="400dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="120dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_centerHorizontal="true"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_marginTop="275dp">&ndash;&gt;-->
<!--&lt;!&ndash;            <LinearLayout&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:orientation="horizontal"&ndash;&gt;-->
<!--&lt;!&ndash;                android:weightSum="3">&ndash;&gt;-->
<!--&lt;!&ndash;                <LinearLayout&ndash;&gt;-->
<!--&lt;!&ndash;                    android:gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:orientation="vertical"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="match_parent">&ndash;&gt;-->
<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:text="Photos"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
<!--&lt;!&ndash;                        />&ndash;&gt;-->
<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:text="125"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textStyle="bold"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:paddingTop="10dp"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textColor="@color/startblue"/>&ndash;&gt;-->

<!--&lt;!&ndash;                </LinearLayout>&ndash;&gt;-->
<!--&lt;!&ndash;                <LinearLayout&ndash;&gt;-->
<!--&lt;!&ndash;                    android:gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:orientation="vertical"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="match_parent">&ndash;&gt;-->
<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:text="Followers"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
<!--&lt;!&ndash;                        />&ndash;&gt;-->
<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:text="1205"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textStyle="bold"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:paddingTop="10dp"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textColor="@color/startblue"/>&ndash;&gt;-->

<!--&lt;!&ndash;                </LinearLayout>&ndash;&gt;-->
<!--&lt;!&ndash;                <LinearLayout&ndash;&gt;-->
<!--&lt;!&ndash;                    android:gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:orientation="vertical"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="match_parent">&ndash;&gt;-->
<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:text="Following"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
<!--&lt;!&ndash;                        />&ndash;&gt;-->
<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:text="360"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textStyle="bold"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:paddingTop="10dp"&ndash;&gt;-->
<!--&lt;!&ndash;                        android:textColor="@color/startblue"/>&ndash;&gt;-->

<!--&lt;!&ndash;                </LinearLayout>&ndash;&gt;-->
<!--&lt;!&ndash;            </LinearLayout>&ndash;&gt;-->

<!--&lt;!&ndash;        </androidx.cardview.widget.CardView>&ndash;&gt;-->
<!--    </RelativeLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="360dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="45dp">-->
<!--        <LinearLayout-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <ImageView-->
<!--                android:layout_width="36dp"-->
<!--                android:layout_height="36dp"-->
<!--                android:src="@drawable/ic_email"/>-->
<!--            <TextView-->
<!--                android:id="@+id/email_id"-->
<!--                android:textStyle="bold"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingLeft="20dp"-->
<!--                android:text="a@gmail.com"/>-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <ImageView-->
<!--                android:layout_width="36dp"-->
<!--                android:layout_height="36dp"-->
<!--                android:src="@drawable/ic_phone"/>-->
<!--            <TextView-->
<!--                android:textStyle="bold"-->
<!--                android:id="@+id/phone_id"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingLeft="20dp"-->
<!--                android:text="+266 225 225"/>-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <ImageView-->
<!--                android:layout_width="36dp"-->
<!--                android:layout_height="36dp"-->
<!--                android:src="@drawable/ic_lock"/>-->
<!--            <TextView-->
<!--                android:textStyle="bold"-->
<!--                android:id="@+id/password_id"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingLeft="20dp"-->
<!--                android:text="Password"/>-->
<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

<!--    <Button-->
<!--        android:id="@+id/logout_button"-->
<!--        android:textColor="#ffffff"-->
<!--        android:background="@drawable/buttonstyle"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="logout"/>-->




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/old_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="Password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/new_pass"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/changeEmail"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/changePass"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/send"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_email_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sending_pass_reset_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send_password_reset_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/remove_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/remove_user"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>